fix cards alignment

--- a/src/components/content/Content.scss
+++ b/src/components/content/Content.scss
@@ -6,6 +6,7 @@
   &:after{
     content: "";
     flex: auto;
+    width: 30%;
     max-width: 30%;
   }
 
